--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ deps=
 sitepackages = False
 recreate = False
 commands =
-    unit: py.test -xv --cov=celery --cov-report=xml --cov-report term
+    unit: py.test -v --cov=celery --cov-report=xml --cov-report term
     integration: py.test -xsv t/integration
 setenv =
     WORKER_LOGLEVEL = INFO
